--- a/image-widget/index.html
+++ b/image-widget/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <title>ImageWidget</title>
-    <base href="/image-widget">
+    <base href="https://dmitriy-kostianetskiy.github.io/mfa-deploy/image-widget/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
